add shop location, owner, stag controller & swagger
