# app/Models/ShopLocation.php
@@ -9,6 +9,34 @@ class ShopLocation extends Model {
 
 	//use CrudTrait;
 
+/**
+*
+*   @SWG\Definition(
+*       definition="shop_location",
+*       @SWG\Property(
+*           property="id",
+*           type="integer",
+*           format="int32"
+*       ),
+*       @SWG\Property(
+*           property="name",
+*           type="string"
+*		),
+*       @SWG\Property(
+*           property="created_at",
+*           type="string"
+*       ),
+*       @SWG\Property(
+*           property="updated_at",
+*           type="string"
+*       ),
+*		@SWG\Property(
+*           property="deleted_at",
+*           type="string"
+*       )
+*   )
+*/
+
     /*
 	|--------------------------------------------------------------------------
 	| GLOBAL VARIABLES
