# app/Models/ShopOwner.php
@@ -9,6 +9,47 @@ class ShopOwner extends Model {
 
 	//use CrudTrait;
 
+/**
+*
+*   @SWG\Definition(
+*       definition="shop_owner",
+*       @SWG\Property(
+*           property="id",
+*           type="integer",
+*           format="int32"
+*       ),
+*       @SWG\Property(
+*           property="user_id",
+*           type="string"
+*		),
+*       @SWG\Property(
+*           property="birthday",
+*           type="string",
+*			format="date"
+*		),
+*       @SWG\Property(
+*           property="gender",
+*           type="string"
+*		),
+*       @SWG\Property(
+*           property="phone",
+*           type="string"
+*		),
+*       @SWG\Property(
+*           property="created_at",
+*           type="string"
+*       ),
+*       @SWG\Property(
+*           property="updated_at",
+*           type="string"
+*       ),
+*		@SWG\Property(
+*           property="deleted_at",
+*           type="string"
+*       )
+*   )
+*/
+
     /*
 	|--------------------------------------------------------------------------
 	| GLOBAL VARIABLES
